# pyChess

./: README.md  mypy.ini  pyproject.toml  requirements.txt  setup.cfg
pyChess/: chess.py  main.py  main_window.py  my_widgets.py
pyChess/chess/: logic.py  my_types.py  types.py
pyChess/gui/: main_window.py  my_widgets.py
pyChess/gui/ui/: main_window.ui
pyChess/ui/: main_window.ui
src/py_chess/: main.py
src/py_chess/chess/: logic.py  my_types.py
src/py_chess/gui/: main_window.py  my_widgets.py  promotion_piece_dialog.py  replay_manager.py
src/py_chess/gui/ui/: main_window.ui  promotion_piece_dialog.ui  replay_manager.ui
